added preprocessing for multiple representations (there are none)

--- a/CSMODEL_MP.ipynb
+++ b/CSMODEL_MP.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2bd4c73c-242c-45ca-a3d8-deb765bbd380",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d1d95f49-ccf1-433c-bb4d-1ae6c8ef4df6",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f5393c18-c1bf-4357-9816-c3df74583a31",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "369a3876-8551-4446-b036-12a1772d1899",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "4                         NaN         1.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f717d8ef",
    "metadata": {},
    "outputs": [
@@ -324,28 +324,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ice sword' 'Sword (Ice)' 'Direwolf teeth' 'Antler' 'Poison' 'Arakh'\n",
-      " 'Unknown (likely a sword)' 'Knife' 'Spear' 'Sword' 'Bolo' 'Mace' 'Shield'\n",
-      " 'Arrow' 'Molten gold' 'Tusk' 'Sword (Needle)' 'Fire' 'Hands' 'Hammer'\n",
-      " 'Magic' 'Pillow' 'Starvation' 'Poison (magic?)' 'Water (drowning)'\n",
-      " 'Unknown' 'Rat' 'Shadow Demon' 'Poison dart' 'Wildfire' 'Blunt object'\n",
-      " 'Flaming arrow' 'Boulder' 'Axe' 'Bludgeon' 'Dragonfire'\n",
-      " 'Sword (Longclaw)' 'Sealed into vault' 'Illness' 'Broken foot' 'Falling'\n",
-      " 'Dragonglass' 'Hanging' 'Dogs' 'Moon Door' 'Giant arrow' 'Nail' 'Pot'\n",
-      " 'Butcher’s knife' 'Barrel' 'Burning oil' 'Mammoth foot' 'Scythe'\n",
-      " 'Magic fireball' 'Hands/Necklace' 'Sword (Oathkeeper)' 'Poisoned water'\n",
-      " 'Old Age' 'Flaying' 'Rock' 'Shucking' 'Club' 'Foot' 'Giant’s foot'\n",
-      " 'Flaming log' 'Giant plank' 'Dragon feet' 'Dragon teeth'\n",
-      " 'Lipstick poison' 'Dragonglass spear' 'Ice scimitar' 'Knives'\n",
-      " 'Horse’s hooves' 'Flame flail' 'Tree' 'Flaming trebuchet projectile'\n",
-      " 'Bell' 'Poisoned wine' 'Gangplank' 'Spiked knuckles' 'Flaming missile'\n",
-      " 'Hands/Whip' 'Crushing' 'Sword (Widow’s Wail)' 'Scorpion bolt' 'Glaive'\n",
-      " 'Warhammer' 'Bear teeth' 'Dragonglass knife' 'Drowning' 'Freezing'\n",
-      " 'Dragonglass axe' 'Flaming sword' 'Ice spear' 'Valyrian steel dagger'\n",
-      " 'Sword (Heartsbane)' 'Giant club' 'Rubble']\n",
-      "['Blade' 'Animal' 'Poison' 'Unknown' 'Polearm' 'Other' 'Mace' 'Arrow'\n",
-      " 'Fire/Burning' 'Hands' 'Bludgeon' 'Magic' 'Household item' 'Crushing'\n",
-      " 'Axe' 'Falling']\n"
+      "method\n",
+      "Antler                        1\n",
+      "Arakh                        54\n",
+      "Arrow                       138\n",
+      "Axe                         102\n",
+      "Barrel                        7\n",
+      "                           ... \n",
+      "Unknown (likely a sword)      1\n",
+      "Valyrian steel dagger         2\n",
+      "Warhammer                     4\n",
+      "Water (drowning)              1\n",
+      "Wildfire                    210\n",
+      "Length: 98, dtype: int64\n"
      ]
     }
    ],
@@ -364,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a4eb7c99",
    "metadata": {},
    "outputs": [
@@ -605,7 +596,7 @@
        "[477 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "100c6137",
    "metadata": {},
    "outputs": [
@@ -655,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "83ba8a1f",
    "metadata": {},
    "outputs": [],
@@ -667,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1a4e91a8",
    "metadata": {},
    "outputs": [
@@ -922,7 +913,7 @@
        "1908  Beyond the Wall  Brotherhood Without Banners         3.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "461ffdf1",
    "metadata": {},
    "outputs": [],
@@ -960,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "07b2d0a4",
    "metadata": {},
    "outputs": [],
@@ -979,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1b56a1a2",
    "metadata": {},
    "outputs": [],
@@ -991,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cc3822f4",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1050,7 @@
        "4477  Winterfell    Unknown         NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "15b5b17a",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3756dcec",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1108,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6460cc61",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "5c441604",
    "metadata": {},
    "outputs": [
@@ -1259,6 +1250,30 @@
    ],
    "source": [
     "print(GOTdeaths_df['character_killed'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "208aec45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importance\n",
+      "1.0    6217\n",
+      "2.0      85\n",
+      "3.0      75\n",
+      "4.0      44\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "importance_counts = GOTdeaths_df.groupby('importance').size()\n",
+    "print(importance_counts)"
    ]
   }
  ],
