same as last commit, just forgot to save some changes

--- a/CSMODEL_MP.ipynb
+++ b/CSMODEL_MP.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2bd4c73c-242c-45ca-a3d8-deb765bbd380",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d1d95f49-ccf1-433c-bb4d-1ae6c8ef4df6",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f5393c18-c1bf-4357-9816-c3df74583a31",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "369a3876-8551-4446-b036-12a1772d1899",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "4                         NaN         1.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f717d8ef",
    "metadata": {},
    "outputs": [
@@ -324,25 +324,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "method\n",
-      "Antler                        1\n",
-      "Arakh                        54\n",
-      "Arrow                       138\n",
-      "Axe                         102\n",
-      "Barrel                        7\n",
-      "                           ... \n",
-      "Unknown (likely a sword)      1\n",
-      "Valyrian steel dagger         2\n",
-      "Warhammer                     4\n",
-      "Water (drowning)              1\n",
-      "Wildfire                    210\n",
-      "Length: 98, dtype: int64\n"
+      "[1 2 3 4 5 6 7 8]\n",
+      "[ 1  2  4  5  6  7  8  9 10  3]\n",
+      "['Ice sword' 'Sword (Ice)' 'Direwolf teeth' 'Antler' 'Poison' 'Arakh'\n",
+      " 'Unknown (likely a sword)' 'Knife' 'Spear' 'Sword' 'Bolo' 'Mace' 'Shield'\n",
+      " 'Arrow' 'Molten gold' 'Tusk' 'Sword (Needle)' 'Fire' 'Hands' 'Hammer'\n",
+      " 'Magic' 'Pillow' 'Starvation' 'Poison (magic?)' 'Water (drowning)'\n",
+      " 'Unknown' 'Rat' 'Shadow Demon' 'Poison dart' 'Wildfire' 'Blunt object'\n",
+      " 'Flaming arrow' 'Boulder' 'Axe' 'Bludgeon' 'Dragonfire'\n",
+      " 'Sword (Longclaw)' 'Sealed into vault' 'Illness' 'Broken foot' 'Falling'\n",
+      " 'Dragonglass' 'Hanging' 'Dogs' 'Moon Door' 'Giant arrow' 'Nail' 'Pot'\n",
+      " 'Butcher’s knife' 'Barrel' 'Burning oil' 'Mammoth foot' 'Scythe'\n",
+      " 'Magic fireball' 'Hands/Necklace' 'Sword (Oathkeeper)' 'Poisoned water'\n",
+      " 'Old Age' 'Flaying' 'Rock' 'Shucking' 'Club' 'Foot' 'Giant’s foot'\n",
+      " 'Flaming log' 'Giant plank' 'Dragon feet' 'Dragon teeth'\n",
+      " 'Lipstick poison' 'Dragonglass spear' 'Ice scimitar' 'Knives'\n",
+      " 'Horse’s hooves' 'Flame flail' 'Tree' 'Flaming trebuchet projectile'\n",
+      " 'Bell' 'Poisoned wine' 'Gangplank' 'Spiked knuckles' 'Flaming missile'\n",
+      " 'Hands/Whip' 'Crushing' 'Sword (Widow’s Wail)' 'Scorpion bolt' 'Glaive'\n",
+      " 'Warhammer' 'Bear teeth' 'Dragonglass knife' 'Drowning' 'Freezing'\n",
+      " 'Dragonglass axe' 'Flaming sword' 'Ice spear' 'Valyrian steel dagger'\n",
+      " 'Sword (Heartsbane)' 'Giant club' 'Rubble']\n",
+      "['Blade' 'Animal' 'Poison' 'Unknown' 'Polearm' 'Other' 'Mace' 'Arrow'\n",
+      " 'Fire/Burning' 'Hands' 'Bludgeon' 'Magic' 'Household item' 'Crushing'\n",
+      " 'Axe' 'Falling']\n",
+      "[2. 1. 3. 4.]\n"
      ]
     }
    ],
    "source": [
+    "print(GOTdeaths_df['season'].unique())\n",
+    "print(GOTdeaths_df['episode'].unique())\n",
     "print(GOTdeaths_df['method'].unique())\n",
-    "print(GOTdeaths_df['method_cat'].unique())"
+    "print(GOTdeaths_df['method_cat'].unique())\n",
+    "print(GOTdeaths_df['importance'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f332524",
+   "metadata": {},
+   "source": [
+    "There are no multiple representations of the same value."
    ]
   },
   {
@@ -355,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a4eb7c99",
    "metadata": {},
    "outputs": [
@@ -596,7 +619,7 @@
        "[477 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "100c6137",
    "metadata": {},
    "outputs": [
@@ -646,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "83ba8a1f",
    "metadata": {},
    "outputs": [],
@@ -658,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1a4e91a8",
    "metadata": {},
    "outputs": [
@@ -913,7 +936,7 @@
        "1908  Beyond the Wall  Brotherhood Without Banners         3.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "461ffdf1",
    "metadata": {},
    "outputs": [],
@@ -951,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "07b2d0a4",
    "metadata": {},
    "outputs": [],
@@ -970,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "1b56a1a2",
    "metadata": {},
    "outputs": [],
@@ -982,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "cc3822f4",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1073,7 @@
        "4477  Winterfell    Unknown         NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "15b5b17a",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "3756dcec",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1131,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6460cc61",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "5c441604",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "208aec45",
    "metadata": {},
    "outputs": [
