--- a/CSMODEL_MP.ipynb
+++ b/CSMODEL_MP.ipynb
@@ -1505,7 +1505,7 @@
    "id": "95acbe21",
    "metadata": {},
    "source": [
-    "2) What allegiances generates greater amount of deaths based on importance?"
+    "2) What allegiances generates greater amount of deaths?"
    ]
   },
   {
