fixed ranking for top rules

--- a/CSMODEL_MP.ipynb
+++ b/CSMODEL_MP.ipynb
@@ -1105,7 +1105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_18060\\1868228584.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_4564\\1868228584.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1156,7 +1156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_18060\\1074672203.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_4564\\1074672203.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1835,9 +1835,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_18060\\3469142571.py:35: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_4564\\3469142571.py:35: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  mean_deaths_by_allegiance = GOTdeaths_df.groupby('allegiance_top_10').apply(\n",
-      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_18060\\3469142571.py:38: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_4564\\3469142571.py:38: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  std_deaths_by_allegiance = GOTdeaths_df.groupby('allegiance_top_10').apply(\n"
      ]
     }
@@ -2716,7 +2716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_18060\\1229654496.py:13: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_4564\\1229654496.py:13: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  colors = cm.get_cmap('tab20', num_methods)\n"
      ]
     },
@@ -2734,7 +2734,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_18060\\1229654496.py:37: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\lance\\AppData\\Local\\Temp\\ipykernel_4564\\1229654496.py:37: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  colors = plt.cm.get_cmap('tab20', num_killers)\n"
      ]
     },
@@ -2927,7 +2927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "fba91c84",
    "metadata": {},
    "outputs": [
@@ -2961,125 +2961,125 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>954</th>\n",
-       "      <td>(Winterfell, House Stark, Background)</td>\n",
-       "      <td>(Bolton soldier)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.645455</td>\n",
-       "      <td>45.543556</td>\n",
+       "      <th>1428</th>\n",
+       "      <td>(Cersei Lannister, Unknown)</td>\n",
+       "      <td>(Background, Fire/Burning, King’s Landing)</td>\n",
+       "      <td>0.025853</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>31.475490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>961</th>\n",
-       "      <td>(Bolton soldier)</td>\n",
-       "      <td>(Winterfell, House Stark, Background)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.780220</td>\n",
-       "      <td>45.543556</td>\n",
+       "      <th>137</th>\n",
+       "      <td>(Rhaegal)</td>\n",
+       "      <td>(Background, Animal)</td>\n",
+       "      <td>0.042517</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.688110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>411</th>\n",
-       "      <td>(Sons of the Harpy, Great Masters)</td>\n",
-       "      <td>(Meereen, Background)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>44.902098</td>\n",
+       "      <th>135</th>\n",
+       "      <td>(Background, Rhaegal)</td>\n",
+       "      <td>(Animal)</td>\n",
+       "      <td>0.042517</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.656606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>408</th>\n",
-       "      <td>(Meereen, Background)</td>\n",
-       "      <td>(Sons of the Harpy, Great Masters)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.496503</td>\n",
-       "      <td>44.902098</td>\n",
+       "      <th>667</th>\n",
+       "      <td>(Background, Golden Company, House Lannister)</td>\n",
+       "      <td>(Animal, King’s Landing)</td>\n",
+       "      <td>0.088304</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.363532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>960</th>\n",
-       "      <td>(House Stark, Winterfell)</td>\n",
-       "      <td>(Bolton soldier, Background)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.628319</td>\n",
-       "      <td>44.334435</td>\n",
+       "      <th>664</th>\n",
+       "      <td>(Background, King’s Landing, Golden Company, H...</td>\n",
+       "      <td>(Animal)</td>\n",
+       "      <td>0.088304</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.656606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>955</th>\n",
-       "      <td>(Bolton soldier, Background)</td>\n",
-       "      <td>(House Stark, Winterfell)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.780220</td>\n",
-       "      <td>44.334435</td>\n",
+       "      <th>663</th>\n",
+       "      <td>(Background, Animal, Golden Company, House Lan...</td>\n",
+       "      <td>(King’s Landing)</td>\n",
+       "      <td>0.088304</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.731761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>410</th>\n",
-       "      <td>(Meereen)</td>\n",
-       "      <td>(Sons of the Harpy, Great Masters, Background)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.461039</td>\n",
-       "      <td>41.694805</td>\n",
+       "      <th>659</th>\n",
+       "      <td>(Drogon, Winterfell)</td>\n",
+       "      <td>(Background, Animal)</td>\n",
+       "      <td>0.058091</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.688110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>409</th>\n",
-       "      <td>(Sons of the Harpy, Great Masters, Background)</td>\n",
-       "      <td>(Meereen)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>41.694805</td>\n",
+       "      <th>655</th>\n",
+       "      <td>(Background, Drogon, Winterfell)</td>\n",
+       "      <td>(Animal)</td>\n",
+       "      <td>0.058091</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.656606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1243</th>\n",
-       "      <td>(House Lannister, Drogon)</td>\n",
-       "      <td>(Goldroad, Animal, Background)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.440994</td>\n",
-       "      <td>39.881988</td>\n",
+       "      <th>1183</th>\n",
+       "      <td>(Background, Rhaegal, Beyond the Wall)</td>\n",
+       "      <td>(Animal, Unknown)</td>\n",
+       "      <td>0.026476</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.527224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1240</th>\n",
-       "      <td>(House Lannister, Animal)</td>\n",
-       "      <td>(Goldroad, Drogon, Background)</td>\n",
-       "      <td>0.011057</td>\n",
-       "      <td>0.440994</td>\n",
-       "      <td>39.881988</td>\n",
+       "      <th>1182</th>\n",
+       "      <td>(Rhaegal, Unknown, Beyond the Wall)</td>\n",
+       "      <td>(Background, Animal)</td>\n",
+       "      <td>0.026476</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.688110</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         antecedents  \\\n",
-       "954            (Winterfell, House Stark, Background)   \n",
-       "961                                 (Bolton soldier)   \n",
-       "411               (Sons of the Harpy, Great Masters)   \n",
-       "408                            (Meereen, Background)   \n",
-       "960                        (House Stark, Winterfell)   \n",
-       "955                     (Bolton soldier, Background)   \n",
-       "410                                        (Meereen)   \n",
-       "409   (Sons of the Harpy, Great Masters, Background)   \n",
-       "1243                       (House Lannister, Drogon)   \n",
-       "1240                       (House Lannister, Animal)   \n",
+       "                                            antecedents  \\\n",
+       "1428                        (Cersei Lannister, Unknown)   \n",
+       "137                                           (Rhaegal)   \n",
+       "135                               (Background, Rhaegal)   \n",
+       "667       (Background, Golden Company, House Lannister)   \n",
+       "664   (Background, King’s Landing, Golden Company, H...   \n",
+       "663   (Background, Animal, Golden Company, House Lan...   \n",
+       "659                                (Drogon, Winterfell)   \n",
+       "655                    (Background, Drogon, Winterfell)   \n",
+       "1183             (Background, Rhaegal, Beyond the Wall)   \n",
+       "1182                (Rhaegal, Unknown, Beyond the Wall)   \n",
        "\n",
-       "                                         consequents   support  confidence  \\\n",
-       "954                                 (Bolton soldier)  0.011057    0.645455   \n",
-       "961            (Winterfell, House Stark, Background)  0.011057    0.780220   \n",
-       "411                            (Meereen, Background)  0.011057    1.000000   \n",
-       "408               (Sons of the Harpy, Great Masters)  0.011057    0.496503   \n",
-       "960                     (Bolton soldier, Background)  0.011057    0.628319   \n",
-       "955                        (House Stark, Winterfell)  0.011057    0.780220   \n",
-       "410   (Sons of the Harpy, Great Masters, Background)  0.011057    0.461039   \n",
-       "409                                        (Meereen)  0.011057    1.000000   \n",
-       "1243                  (Goldroad, Animal, Background)  0.011057    0.440994   \n",
-       "1240                  (Goldroad, Drogon, Background)  0.011057    0.440994   \n",
+       "                                     consequents   support  confidence  \\\n",
+       "1428  (Background, Fire/Burning, King’s Landing)  0.025853         1.0   \n",
+       "137                         (Background, Animal)  0.042517         1.0   \n",
+       "135                                     (Animal)  0.042517         1.0   \n",
+       "667                     (Animal, King’s Landing)  0.088304         1.0   \n",
+       "664                                     (Animal)  0.088304         1.0   \n",
+       "663                             (King’s Landing)  0.088304         1.0   \n",
+       "659                         (Background, Animal)  0.058091         1.0   \n",
+       "655                                     (Animal)  0.058091         1.0   \n",
+       "1183                           (Animal, Unknown)  0.026476         1.0   \n",
+       "1182                        (Background, Animal)  0.026476         1.0   \n",
        "\n",
        "           lift  \n",
-       "954   45.543556  \n",
-       "961   45.543556  \n",
-       "411   44.902098  \n",
-       "408   44.902098  \n",
-       "960   44.334435  \n",
-       "955   44.334435  \n",
-       "410   41.694805  \n",
-       "409   41.694805  \n",
-       "1243  39.881988  \n",
-       "1240  39.881988  "
+       "1428  31.475490  \n",
+       "137    3.688110  \n",
+       "135    3.656606  \n",
+       "667    7.363532  \n",
+       "664    3.656606  \n",
+       "663    4.731761  \n",
+       "659    3.688110  \n",
+       "655    3.656606  \n",
+       "1183   8.527224  \n",
+       "1182   3.688110  "
       ]
      },
      "execution_count": 26,
@@ -3247,7 +3247,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2279</th>\n",
-       "      <td>(Blade, Significant)</td>\n",
+       "      <td>(Significant, Blade)</td>\n",
        "      <td>(Others)</td>\n",
        "      <td>0.001713</td>\n",
        "      <td>0.687500</td>\n",
@@ -3262,7 +3262,7 @@
        "      <td>4.436083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2977</th>\n",
+       "      <th>2978</th>\n",
        "      <td>(King’s Landing, Significant)</td>\n",
        "      <td>(Others)</td>\n",
        "      <td>0.001402</td>\n",
@@ -3294,7 +3294,7 @@
        "      <td>2.918636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2978</th>\n",
+       "      <th>2977</th>\n",
        "      <td>(Others, Significant)</td>\n",
        "      <td>(King’s Landing)</td>\n",
        "      <td>0.001402</td>\n",
@@ -3304,7 +3304,7 @@
        "    <tr>\n",
        "      <th>2283</th>\n",
        "      <td>(Significant)</td>\n",
-       "      <td>(Blade, Others)</td>\n",
+       "      <td>(Others, Blade)</td>\n",
        "      <td>0.001713</td>\n",
        "      <td>0.250000</td>\n",
        "      <td>4.496499</td>\n",
@@ -3312,14 +3312,14 @@
        "    <tr>\n",
        "      <th>2981</th>\n",
        "      <td>(Significant)</td>\n",
-       "      <td>(King’s Landing, Others)</td>\n",
+       "      <td>(Others, King’s Landing)</td>\n",
        "      <td>0.001402</td>\n",
        "      <td>0.204545</td>\n",
        "      <td>10.181290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2976</th>\n",
-       "      <td>(King’s Landing, Others)</td>\n",
+       "      <td>(Others, King’s Landing)</td>\n",
        "      <td>(Significant)</td>\n",
        "      <td>0.001402</td>\n",
        "      <td>0.069767</td>\n",
@@ -3331,25 +3331,25 @@
       ],
       "text/plain": [
        "                        antecedents               consequents   support  \\\n",
-       "2279           (Blade, Significant)                  (Others)  0.001713   \n",
+       "2279           (Significant, Blade)                  (Others)  0.001713   \n",
        "471                   (Significant)                  (Others)  0.004516   \n",
-       "2977  (King’s Landing, Significant)                  (Others)  0.001402   \n",
+       "2978  (King’s Landing, Significant)                  (Others)  0.001402   \n",
        "2280          (Others, Significant)                   (Blade)  0.001713   \n",
        "417                   (Significant)          (King’s Landing)  0.002492   \n",
        "155                   (Significant)                   (Blade)  0.002492   \n",
-       "2978          (Others, Significant)          (King’s Landing)  0.001402   \n",
-       "2283                  (Significant)           (Blade, Others)  0.001713   \n",
-       "2981                  (Significant)  (King’s Landing, Others)  0.001402   \n",
-       "2976       (King’s Landing, Others)             (Significant)  0.001402   \n",
+       "2977          (Others, Significant)          (King’s Landing)  0.001402   \n",
+       "2283                  (Significant)           (Others, Blade)  0.001713   \n",
+       "2981                  (Significant)  (Others, King’s Landing)  0.001402   \n",
+       "2976       (Others, King’s Landing)             (Significant)  0.001402   \n",
        "\n",
        "      confidence       lift  \n",
        "2279    0.687500   4.627293  \n",
        "471     0.659091   4.436083  \n",
-       "2977    0.562500   3.785967  \n",
+       "2978    0.562500   3.785967  \n",
        "2280    0.379310   3.044440  \n",
        "417     0.363636   1.720640  \n",
        "155     0.363636   2.918636  \n",
-       "2978    0.310345   1.468478  \n",
+       "2977    0.310345   1.468478  \n",
        "2283    0.250000   4.496499  \n",
        "2981    0.204545  10.181290  \n",
        "2976    0.069767  10.181290  "
