--- a/CSMODEL_MP.ipynb
+++ b/CSMODEL_MP.ipynb
@@ -2721,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e97d8273",
    "metadata": {},
    "outputs": [
@@ -2877,7 +2877,7 @@
     "\n",
     "df_mine['importance_level'] = df_mine['importance'].map(importance_mapping)\n",
     "\n",
-    "df_mine = df_mine[['importance_level','allegiance', 'killer_top_15', 'method_cat', 'location']]\n",
+    "df_mine = df_mine[['importance_level','allegiance', 'killer', 'method_cat', 'location']]\n",
     "\n",
     "#Convert each row to a transaction (list of values)\n",
     "transactions = df_mine.astype(str).values.tolist()\n",
